<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/person_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.PersonInfo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name:"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/username"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address:"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="City or Town:"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Province:"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <EditText
            android:id="@+id/province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/province"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Postal Code:"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Country:"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/zip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/zip"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:maxLength="10"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Space
                android:layout_width="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </GridLayout>

        <Button
            android:id="@+id/resetInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="buttonInfoUpdate"
            android:text="@string/updateInfo"
            android:layout_marginLeft="@dimen/review_purchase_button_margin"
            android:layout_marginRight="@dimen/review_purchase_button_margin"
            android:layout_marginTop="@dimen/review_purchase_button_margin"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</ScrollView>