<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.LoggedActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hi,"
        android:textSize="50sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="70sp" />

    <Button
        android:id="@+id/personalInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonInformationOnClick"
        android:text="@string/personalInfo"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="@dimen/review_purchase_button_margin"
        android:layout_marginRight="@dimen/review_purchase_button_margin"
        android:layout_marginTop="@dimen/logged_button_top_margin"/>

    <Button
        android:id="@+id/paymentInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonPaymentOnClick"
        android:text="@string/paymentInfo"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="@dimen/review_purchase_button_margin"
        android:layout_marginRight="@dimen/review_purchase_button_margin"
        android:layout_marginTop="@dimen/logged_button_top_margin"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/review_purchase_button_margin"
        android:layout_marginTop="@dimen/logout_button_top_margin"
        android:layout_marginRight="@dimen/review_purchase_button_margin"
        android:background="@color/colorPrimary"
        android:onClick="buttonLogoutOnClick"
        android:text="@string/logout"
        android:textColor="#FFFFFF" />

</LinearLayout>