<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ShoppingCartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoppingCart"
            android:textSize="50sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <ListView
            android:id="@+id/shoppingCart"
            android:layout_width="match_parent"
            android:layout_height="350dp"/>

        <Button
            android:id="@+id/emptyCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/review_purchase_button_margin"
            android:layout_marginRight="@dimen/review_purchase_button_margin"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/emptyCart"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/proceedCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/review_purchase_button_margin"
            android:layout_marginRight="@dimen/review_purchase_button_margin"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/checkout"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>